--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -1,14 +1,16 @@
 video {
     object-fit: cover;
-    min-width: 100%;
-    min-height: 100%;
+    width: 100%;
+    height: 100%;
     position: fixed;
     z-index:-1;
+    margin: auto;
 }
 
 .hero-container {
     box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.25);
     object-fit: contain;
+    overflow: hidden;
 }
 
 .hero-content{
@@ -56,10 +58,6 @@ video {
 }
 
 @media screen and (max-width: 768px) {
-  video {
-    position: absolute;
-    top: -20px;
-  }
 
   .hero-content > h1 {
     font-size: 50px;
